# amp-practitioner

./: .gitignore  Procfile  pyproject.toml
attendance/: admin.py  apps.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/css/: 404.css  index.css
static/css/admin/: login.css
static/js/: index.js
static/js/api/: index.js
static/js/components/: DigitalClock.js  FormAttendance.js  ModalInformation.js  NavigationBar.js
static/js/utils/: api.js  constants.js  utils.js
templates/: 404.html
templates/admin/: base_site.html  login.html
templates/attendance/: index.html
templates/base/: _base.html
