[tool.poetry]
name = "attendance-municipal-practitioners"
version = "0.1.0"
description = "Web application to record the attendance of the municipality's interns in the IT area"
authors = ["MielAndMoon <dmestasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.0.6"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
dj-database-url = "^2.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
